# ai-data-analyst

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  utils.py
prompts/: error-correction-prompt.md  prompt.md
static/: index.html  script.js  styles.css
