[project]
name = "ai-data-analyst"
version = "0.1.0"
description = "AI Data Analyst"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "altair>=6.0.0",
    "azure-storage-blob>=12.28.0",
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.4.4",
    "fastapi>=0.128.5",
    "google-cloud-storage>=3.9.0",
    "google-genai>=1.62.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "odfpy>=1.4.1",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pdfminer-six>=20251230",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.0",
    "plotly>=6.5.2",
    "pymongo>=4.16.0",
    "pymysql>=1.1.2",
    "pypandoc>=1.16.2",
    "pypdf2>=3.0.1",
    "pypdfium2>=5.4.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "s3fs>=2026.2.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.46",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
    "uvicorn>=0.40.0",
    "xlrd>=2.0.2",
]
